Actions
Bug #7988
closedloader: ls should use snprintf and check for the NULL pointer
Start date:
2017-03-20
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
ls has couple of small issues - should check for malloc result and use snprintf for safety
Updated by Electric Monk about 5 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit bab26a4c193f04da365e8c4d412c55486dfb7d98
commit bab26a4c193f04da365e8c4d412c55486dfb7d98 Author: Toomas Soome <tsoome@me.com> Date: 2017-03-25T02:20:52.000Z 7988 loader: ls should use snprintf and check for the NULL pointer Reviewed by: Juraj Lutter <juraj@lutter.sk> Reviewed by: Alexander Pyhalov <apyhalov@gmail.com> Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@omniti.com>
Actions