7988 loader: ls should use snprintf and check for the NULL pointer Reviewed by: Juraj Lutter <juraj@lutter.sk> Reviewed by: Alexander Pyhalov <apyhalov@gmail.com> Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@omniti.com>